added genre, filter genres, search

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #f7f7f7;
+}
+
 .prop-title {
   font-family: "Barlow", sans-serif;
   font-size: 2rem !important;
@@ -61,5 +66,46 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+.bg-pill {
+  background-color: #393e46;
+}
+
+.brand-font {
+  font-family: "Bebas Neue", cursive;
+  font-size: 2rem;
+}
+
+input[type="search"]:focus {
+  border-color: #ffdb3b;
+  -webkit-box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(133, 114, 7, 0.6);
+          box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(133, 114, 7, 0.6);
+  outline: 0 none;
+}
+
+.bg-warning,
+.btn-warning {
+  background-color: #f79c1d !important;
+}
+
+.text-warning {
+  color: #f79c1d !important;
+}
+
+input#search {
+  border: none;
+  outline: none;
+  width: 100%;
+  background: none;
+}
+
+.form-control {
+  opacity: 0.4 !important;
+}
+
+.spinner-grow {
+  width: 5rem;
+  height: 5rem;
 }
 /*# sourceMappingURL=main.css.map */
