--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,10 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f7f7f7;
+  background-color: #eeeeee;
+}
+
+.link-hover:hover {
+  color: #fdb93c !important;
 }
 
 .prop-title {
@@ -8,35 +12,67 @@ body {
   font-size: 2rem !important;
 }
 
-.overview-container {
+.col-3 .overview-container {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #393e46a2;
+  background-color: #212529de;
   color: #fff;
   border-radius: 0.3rem;
   height: 100%;
-  padding: 10px;
-  overflow: hidden;
+  padding: 20px;
   width: 0;
   opacity: 0;
   text-align: initial;
   cursor: pointer;
-  -webkit-transition: all ease 0.3s;
-  transition: all ease 0.3s;
+  -webkit-transition: width cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s 0.1s;
+  transition: width cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s 0.1s;
+}
+
+.col-3 .overview-text {
+  overflow: hidden;
+  height: inherit;
+  opacity: 0;
+  -webkit-transition: ease 0.1s 0.4s;
+  transition: ease 0.1s 0.4s;
 }
 
 .col-3:hover .overview-container {
   width: calc(100%);
   opacity: 1;
-  -webkit-transition: all ease 0.3s;
-  transition: all ease 0.3s;
+  -webkit-transition: width cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s 0.1s;
+  transition: width cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s 0.1s;
 }
 
-.line-clamp {
-  display: -webkit-box;
-  -webkit-line-clamp: 18;
-  -webkit-box-orient: vertical;
+.col-3:hover .overview-text {
+  opacity: 1;
+  -webkit-transition: ease 0.1s 0.4s;
+  transition: ease 0.1s 0.4s;
+}
+
+.col-3:hover .poster-img {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  -webkit-transition: -webkit-transform ease 0.3s;
+  transition: -webkit-transform ease 0.3s;
+  transition: transform ease 0.3s;
+  transition: transform ease 0.3s, -webkit-transform ease 0.3s;
+}
+
+.col-3:not(:hover) .overview-container {
+  width: 0;
+  opacity: 0;
+  -webkit-transition: cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s;
+  transition: cubic-bezier(0, 0.98, 0.34, 0.9) 0.3s;
+}
+
+.col-3:not(:hover) .poster-img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform ease 0.3s;
+  transition: -webkit-transform ease 0.3s;
+  transition: transform ease 0.3s;
+  transition: transform ease 0.3s, -webkit-transform ease 0.3s;
 }
 
 input#page-num {
@@ -86,11 +122,11 @@ input[type="search"]:focus {
 
 .bg-warning,
 .btn-warning {
-  background-color: #f79c1d !important;
+  background-color: #fdb827 !important;
 }
 
 .text-warning {
-  color: #f79c1d !important;
+  color: #fdb827 !important;
 }
 
 input#search {
@@ -98,14 +134,22 @@ input#search {
   outline: none;
   width: 100%;
   background: none;
+  color: #fff;
 }
 
 .form-control {
-  opacity: 0.4 !important;
+  background: none;
+  border-radius: 0;
+  border: 4.5px double #fdb827 !important;
+  border-radius: 5px;
 }
 
 .spinner-grow {
   width: 5rem;
   height: 5rem;
+}
+
+.container {
+  min-height: 100vh !important;
 }
 /*# sourceMappingURL=main.css.map */
