--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,4 +212,17 @@ input#search {
   border-radius: 0 35px 35px 0;
   height: 3 0px;
 }
+
+.parallax {
+  width: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: multiply;
+  z-index: 1;
+}
 /*# sourceMappingURL=main.css.map */
