--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -197,3 +197,18 @@ input#search {
   border-radius: 0 35px 35px 0;
   height: 3 0px;
 }
+
+// background
+
+.parallax {
+  width: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: multiply;
+  z-index: 1;
+}
