--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,18 @@ body {
   background-color: #eeeeee;
 }
 
+.g-center {
+  display: -webkit-inline-box !important;
+  display: -ms-inline-flexbox !important;
+  display: inline-flex !important;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .link-hover:hover {
   color: #fdb93c !important;
 }
@@ -167,18 +179,33 @@ input[type="search"]:focus {
 }
 
 input#search {
-  border: none;
-  outline: none;
+  border: none !important;
+  outline: none !important;
   width: 100%;
   background: none;
   color: #fff;
 }
 
+::-webkit-input-placeholder {
+  color: #fdb827;
+}
+
+:-ms-input-placeholder {
+  color: #fdb827;
+}
+
+::-ms-input-placeholder {
+  color: #fdb827;
+}
+
+::placeholder {
+  color: #fdb827;
+}
+
 .form-control {
-  background: none;
-  border-radius: 0;
-  border: 3px double #fdb827 !important;
-  border-radius: 5px;
+  background: #6c757d;
+  border: none !important;
+  outline: none !important;
 }
 
 .spinner-grow {
@@ -214,15 +241,75 @@ input#search {
 }
 
 .parallax {
-  width: 100%;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 550px;
   background-attachment: fixed;
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: multiply;
   z-index: 1;
+  -webkit-transform: translate(0, -15%);
+          transform: translate(0, -15%);
+}
+
+.parallax::after {
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: -1;
+}
+
+.box-margin {
+  min-height: 550px !important;
+  z-index: 1;
+}
+
+.box-margin .poster-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.box-margin .poster-container + div.container {
+  position: absolute;
+  bottom: 70px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  left: 200px;
+}
+
+.pic-collection {
+  width: 100%;
+  height: 250px !important;
+  overflow-x: scroll;
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+}
+
+.pic-collection::-webkit-scrollbar {
+  height: 5px;
+}
+
+.pic-collection::-webkit-scrollbar-track {
+  background: none;
+}
+
+.pic-collection::-webkit-scrollbar-thumb {
+  background-color: #a5b8c8;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=main.css.map */
