--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -289,27 +289,84 @@ input#search {
   left: 200px;
 }
 
-.pic-collection {
+.pic-main-container {
   width: 100%;
-  height: 250px !important;
-  overflow-x: scroll;
-  white-space: nowrap;
+  height: 250px;
+  position: relative;
+}
+
+.pic-main-container .pic-collection-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: inherit;
+  width: inherit;
+}
+
+.pic-main-container .pic-collection-wrapper .pic-collection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   place-items: center;
+  overflow: scroll hidden;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
-.pic-collection::-webkit-scrollbar {
-  height: 5px;
+.pic-main-container .pic-collection-wrapper .pic-collection::-webkit-scrollbar {
+  height: 7px;
 }
 
-.pic-collection::-webkit-scrollbar-track {
+.pic-main-container .pic-collection-wrapper .pic-collection::-webkit-scrollbar-track {
   background: none;
 }
 
-.pic-collection::-webkit-scrollbar-thumb {
+.pic-main-container .pic-collection-wrapper .pic-collection::-webkit-scrollbar-thumb {
   background-color: #a5b8c8;
   border-radius: 5px;
+}
+
+.pic-main-container .pic-collection-wrapper .pic-collection button {
+  position: absolute;
+  width: 50px;
+  height: inherit;
+  border: none !important;
+  background: #cdd0cb5e;
+  z-index: 50;
+}
+
+.stars-wrapper {
+  display: inline-block;
+  font-size: 30px;
+  font-family: Times;
+  line-height: 1;
+}
+
+span.stars {
+  letter-spacing: 3px;
+  background-clip: text !important;
+  -webkit-text-fill-color: transparent;
+}
+
+.card-width {
+  min-width: 150px !important;
+  height: 85%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 7px;
+}
+
+.card-width img {
+  height: 180px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-width span.text-secondary {
+  font-size: 12px !important;
+}
+
+.h-300 {
+  height: 320px !important;
 }
 /*# sourceMappingURL=main.css.map */
